--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -9,7 +9,8 @@
   --color-secondary: #fff1cd;  /* Warm yellow, playful accent */
   --color-button: #ffdf76;
   /* Backgrounds */
-  --color-bg: #F9FAFB;         /* Very light gray/white */
+  --color-bg: #F9FAFB;
+  --color-dark-container: #4d4d4d;          
   --color-card: #FFFFFF;       /* Card background */
   --color-bg-alt: #EFF6FF;     /* Subtle blue tint for sections */
 
@@ -31,7 +32,8 @@
   --color-secondary: #fff1cd;  /* Warm yellow, playful accent */
   --color-button: #ffdf76;
   /* Backgrounds */
-  --color-bg: #F9FAFB;         /* Very light gray/white */
+  --color-bg: #F9FAFB;  
+  --color-dark-container: #4d4d4d;       /* Very light gray/white */
   --color-card: #FFFFFF;       /* Card background */
   --color-bg-alt: #EFF6FF;     /* Subtle blue tint for sections */
 
@@ -65,5 +67,60 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Comic Sans MS', 'Chalkboard SE', 'Comic Neue', cursive, Arial, Helvetica, sans-serif;
+}
+
+@layer components {
+  
+  .background {
+    @apply min-h-screen bg-gradient-to-br from-yellow-100 via-pink-100 to-purple-200;
+  }
+
+  .text-outline-light {
+    -webkit-text-stroke: 4px rgba(240, 240, 240, 0.63);
+    -webkit-text-fill-color: transparent;
+  }
+  .text-outline-dark {
+    -webkit-text-stroke: 4px rgba(41, 41, 41, 0.63);
+    -webkit-text-fill-color: transparent;
+  }
+
+  .gradient-text {
+    @apply font-bold text-center mb-6 bg-gradient-to-r from-purple-200 via-pink-100 to-yellow-100 bg-clip-text text-transparent
+  }
+
+  /* Buttons */
+  .btn {
+    @apply cursor-pointer px-8 py-2 rounded-xl text-lg border-5 border-gray-400 hover:scale-105 transition;
+  }
+
+  .btn-primary {
+    @apply bg-[--color-primary] text-white hover:bg-indigo-700 px-4 py-2 shadow-sm hover:scale-105;
+  }
+
+  .btn-secondary {
+    @apply bg-gray-100 text-gray-800 hover:bg-gray-200 px-4 py-2 shadow-sm;
+  }
+
+  .btn-danger {
+    @apply bg-[--color-danger] text-white hover:bg-red-600 px-4 py-2 shadow-sm;
+  }
+
+  /* Cards */
+  .card {
+    @apply rounded-2xl shadow-lg border border-gray-200/80 p-6 transition-all hover:shadow-2xl  hover:shadow-xl transition-all transform hover:scale-110 hover:rotate-2 border-4;
+  }
+
+  /* Input fields */
+  .input-text {
+    @apply w-full px-4 py-2 bg-gray-900 text-gray-100 border-2 border-gray-400 rounded-xl focus:border-purple-200 focus:outline-none;
+  }
+
+  /* Section containers */
+  .section-gray {
+    @apply p-8 bg-gray-800/80 rounded-2xl shadow-2xl border-5 border-white/60;
+  }
+  .section-dark {
+    @apply inline-block bg-gray-800/90 rounded-2xl p-8 shadow-xl border-5 border-white/60;
+  }
 }
