--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -86,7 +86,7 @@ body {
   }
 
   .gradient-text {
-    @apply font-bold text-center mb-6 bg-gradient-to-r from-purple-700 via-pink-600 to-orange-600 bg-clip-text text-transparent
+    @apply font-bold text-center mb-6 bg-gradient-to-r from-purple-200 via-pink-100 to-yellow-100 bg-clip-text text-transparent
   }
 
   /* Buttons */
@@ -118,10 +118,10 @@ body {
 
   /* Section containers */
   .section-gray {
-    @apply p-8 bg-gray-800/80 rounded-2xl shadow-2xl border-5 border-white/60;
+    @apply p-8 bg-gray-800/80 rounded-2xl shadow-2xl border-5 border-white/60 transition-all hover:shadow-2xl  hover:shadow-xl transition-all transform hover:scale-110 hover:rotate-2;
   }
   .section-dark {
-    @apply w-full bg-gray-800/90 rounded-2xl p-8 shadow-xl border-5 border-white/60;
+    @apply inline-block bg-gray-800/90 rounded-2xl p-8 shadow-xl border-5 border-white/60;
   }
 }
 
